@@ -10,7 +10,7 @@
 #endif
 
 // Some ports do not support long long yet
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 void big(long long u) { }
 
 void doit(unsigned int a,unsigned int b,char *id)
@@ -24,7 +24,7 @@ void doit(unsigned int a,unsigned int b,char *id)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   doit(1,1,"\n");
   return;
 #endif
